apps/atlas/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: atlas
  namespace: atlas
  labels:
    app.kubernetes.io/name: atlas
    app.kubernetes.io/instance: atlas
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: atlas
    app.kubernetes.io/instance: atlas
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
